--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -52,6 +52,10 @@
   transform: translateX(5px);
 }
 
+.nav-item {
+  color: white;
+}
+
 .nav-link i {
   margin-right: 0.75rem;
   font-size: 1.1rem;
